k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: graphapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: backend-app
          image: 693938699452.dkr.ecr.ap-northeast-1.amazonaws.com/graphapp-eks-backend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: graphapp
spec:
  selector:
    app: backend-app
  # type: NodePort
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      # nodePort: 30081
