k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: graphapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: graphapp-frontend:local
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: graphapp
spec:
  selector:
    app: frontend
  # type: NodePort
  type: ClusterIP
  ports:
    - port: 3000
      # nodePort: 30000
      targetPort: 3000
